Changed the text to fix contrast again

--- a/src/App.css
+++ b/src/App.css
@@ -38,5 +38,5 @@
 }
 
 .read-the-docs{
-  color: #555555;
+  color: #bfbfbf;
 }
